Fix styling to have uniform spacing

--- a/RubyOnRailsWebDevSpecialisation/ResponsiveDesignAssignment/css/styles.css
+++ b/RubyOnRailsWebDevSpecialisation/ResponsiveDesignAssignment/css/styles.css
@@ -12,9 +12,7 @@
     position: relative;
     padding-top: 40px;
     padding-bottom: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
+    margin-right: 15px;
     border: 1px solid;
     margin-bottom: 15px;
 }
@@ -38,7 +36,7 @@
 }
 
 .row {
-    width: 100%;
+    margin-left:15px;
 }
 
 .header {
@@ -85,9 +83,6 @@
         width: 100%;
     }
     
-    .thirdMenuContent {
-        width: 95%;
-    }
     .thirdMenuBody {
         width: 97.5%;
     }
